--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
 
     //gson parser
     compile 'com.google.code.gson:gson:2.8.5'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
 }
