Added recycler view and binded movies list

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,9 @@ dependencies {
 
     //gson parser
     compile 'com.google.code.gson:gson:2.8.5'
+
+    //life cycle components
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
